--- a/src/Newapp/MainPages/Main.css
+++ b/src/Newapp/MainPages/Main.css
@@ -1,12 +1,11 @@
 .sidnav{
-    
-    top: 0;
+     top: 0;
     bottom: 0;
     left: 0;
-    min-height: 100vh !important;
+    min-height: 100vh;
     z-index: 100;
     padding: 48px 0 0;
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+
     
 }
 .foot{
